Use JDK 17 runtime