@@ -356,7 +356,25 @@ val sparkSettings = Seq(
       "SPARK_HOME" -> sparkHome.value,
       "PATH" -> Seq(sparkHome, sys.env("PATH")).mkString(File.pathSeparator)
     )
-  }
+  },
+  Test / javaOptions ++= Seq(
+    // Add JVM flags required for Spark to work with Java 9+
+    // These open internal Java modules that Spark's unsafe code needs to access
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--add-opens=java.base/java.net=ALL-UNNAMED",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+    "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+    "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+    "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
+  )
 )
 
 lazy val `polynote-spark-runtime` = project.settings(
